--- a/server/Gemfile
+++ b/server/Gemfile
@@ -24,6 +24,8 @@ gem 'jbuilder', '~> 2.7'
 # Use Active Storage variant
 # gem 'image_processing', '~> 1.2'
 gem 'rack-cors'
+gem 'carrierwave', '~> 2.0'
+gem 'pry', '~> 0.13.1'
 
 # Reduces boot times through caching; required in config/boot.rb
 gem 'bootsnap', '>= 1.4.4', require: false
